[fix]:Correcting page alignments

--- a/src/components/blog/Blog.css
+++ b/src/components/blog/Blog.css
@@ -44,7 +44,6 @@
 
 /* Blog.css */
 .blog-container {
-    max-width: 1000px;
     margin: 0 auto;
     padding: 6rem 2rem 4rem;
     min-height: 100vh;
