--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,8 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
+  overflow-x: hidden;
+  width: 100%;
 
   /*color-scheme: light dark;*/
   color: rgb(56, 56, 56);
@@ -27,6 +29,14 @@ body {
   place-items: center;
   min-width: 320px;
 }
+html, body {
+  overflow-x: hidden;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+
 
 
 
@@ -35,5 +45,4 @@ body {
     
     background-color: #f8f8f8;
   }
- 
 }
